Feat: Added admin portal

--- a/src/Components/Button/Button.scss
+++ b/src/Components/Button/Button.scss
@@ -1,8 +1,7 @@
 @import 'styles/variables';
 
-.button {
+.custom-button {
   font-family: 'Montserrat', Arial, Helvetica, sans-serif;
-  padding: 8px 24px !important;
   background-color: $primary-color !important;
   color: white !important;
 }
