--- a/src/index.scss
+++ b/src/index.scss
@@ -1,10 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Cormorant+Infant&family=Montserrat&family=Open+Sans&display=swap');
 @import '~bootstrap/scss/bootstrap';
+@import '~react-toastify/dist/ReactToastify.css';
 
 * {
   margin: 0;
   box-sizing: border-box;
   font-family: 'Cormorant Infant', 'Times New Roman', serif;
+  // color: black;
+  font-size: 18px;
+  font-weight: 400;
 }
 
 .row {
